--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -434,7 +434,7 @@
                                                     <!--</td>-->
                                                 <!--</tr>-->
                                                 <tr>
-                                                    <td class="col-md-1">Exp. Hold Period per Investment</td>
+                                                    <td class="col-md-1">Exp. Hold Period per Investment (yrs)</td>
                                                     <td class="col-md-3">
                                                         <!--<input style="width: 30%" type="text" name="fundTerm" [(ngModel)]="fund.fundTerm" pattern="[+]?[0-9]*\.?[0-9]+" #fundTerm="ngModel"/><input style="width: 70%" type="text" name="fundTermComment" [(ngModel)]="fund.fundTermComment" placeholder="Comment"/>-->
                                                         <input style="width: 100%" type="text" name="expHoldPeriodPerInvestment" [(ngModel)]="fund.expHoldPeriodPerInvestment"/>
