--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -467,13 +467,15 @@
                                             <table class="col-md-4 table-striped table-condensed">
                                                 <tr>
                                                     <td class="col-md-1">First close</td>
-                                                    <td class="col-md-3"><input type='text' class="form-control" id="firstClose" name="firstClose" [(ngModel)]="fund.firstClose"/></td>
+                                                    <!--<td class="col-md-3"><input type='text' class="form-control" id="firstClose" name="firstClose" [(ngModel)]="fund.firstClose"/></td>-->
+                                                    <td class="col-md-3"><input type='text' class="form-control" name="firstClose" [(ngModel)]="fund.firstCloseComment"/></td>
                                                 </tr>
                                             </table>
                                             <table class="col-md-4 table-striped table-condensed">
                                                 <tr>
                                                     <td class="col-md-1">Final close</td>
-                                                    <td class="col-md-3"><input type='text' class="form-control" id="finalClose" name="finalClose" [(ngModel)]="fund.finalClose"/></td>
+                                                    <!--<td class="col-md-3"><input type='text' class="form-control" id="finalClose" name="finalClose" [(ngModel)]="fund.finalClose"/></td>-->
+                                                    <td class="col-md-3"><input type='text' class="form-control" name="finalClose" [(ngModel)]="fund.finalCloseComment"/></td>
                                                 </tr>
                                             </table>
                                         </div>
