--- a/nicnbk-ui-angular2/src/app/pe/view/pe.firm-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.firm-profile.component.html
@@ -176,6 +176,14 @@
                                     </td>
                                 </tr>
                             </table>
+                            <div class=" col-md-1">&nbsp;</div>
+                            <div class="col-md-3">
+                                Logo will be here!
+                                <form #yourForm="ngForm" (ngSubmit)="onSubmitLogo()" *ngIf="canEdit()">
+                                    <input type="file" #fileupload name="myFile" (change)="fileChange(fileupload.files)"/>
+                                    <button type="submit" class="btn btn-success" [disabled]="firm.id == 0 || firm.id == null">Upload a new LOGO</button>
+                                </form>
+                            </div>
                         </div>
                         <div class="row">
                             <div class="col-md-1 pull-right">
