--- a/nicnbk-ui-angular2/src/app/pe/view/pe.firm-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.firm-profile.component.html
@@ -178,7 +178,9 @@
                             </table>
                             <div class=" col-md-1">&nbsp;</div>
                             <div class="col-md-3">
-                                <img [src]="url" width = 100%>
+                                <!--<img [src]="url" style="max-width: 245px; max-height: 245px; width: auto; height: auto">-->
+                                <!--<img [src]="url" style="width: 100%; max-height: 245px">-->
+                                <img [src]="url" style="max-width: 245px; max-height: 245px">
                                 <br/>
                                 <form #yourForm="ngForm" (ngSubmit)="onSubmitLogo()" *ngIf="canEdit()">
                                     <input type="file" #fileupload name="myFile" (change)="fileChange(fileupload.files)"/>
