--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -905,18 +905,18 @@
                                         <br>
                                         <table class="table table-hover table-responsive table-condensed" style="font-size: smaller">
                                             <tr>
-                                                <th>GP Merits (bold part)</th>
+                                                <!--<th>GP Merits (bold part)</th>-->
                                                 <th>GP Merits</th>
                                                 <th></th>
                                             </tr>
                                             <tr *ngFor="let item of fund.onePagerDescriptions" [hidden]="item.type !=1">
-                                                <td>
-                                                    <textarea fz-elastic spellcheck="false"  class="form-control" name="descriptionBold" [(ngModel)]="item.descriptionBold"></textarea>
-                                                    <!--<input type="text" class="form-control" name="descriptionBold" [(ngModel)]="item.descriptionBold" placeholder="-" #descriptionBold="ngModel"/>-->
-                                                    <!--<div [hidden]="descriptionBold.valid || descriptionBold.pristine" class="alert alert-danger">-->
-                                                        <!--Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'-->
-                                                    <!--</div>-->
-                                                </td>
+                                                <!--<td>-->
+                                                    <!--<textarea fz-elastic spellcheck="false"  class="form-control" name="descriptionBold" [(ngModel)]="item.descriptionBold"></textarea>-->
+                                                    <!--&lt;!&ndash;<input type="text" class="form-control" name="descriptionBold" [(ngModel)]="item.descriptionBold" placeholder="-" #descriptionBold="ngModel"/>&ndash;&gt;-->
+                                                    <!--&lt;!&ndash;<div [hidden]="descriptionBold.valid || descriptionBold.pristine" class="alert alert-danger">&ndash;&gt;-->
+                                                        <!--&lt;!&ndash;Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'&ndash;&gt;-->
+                                                    <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                                                <!--</td>-->
 
                                                 <td>
                                                     <textarea fz-elastic spellcheck="false"  class="form-control" name="description" [(ngModel)]="item.description"></textarea>
@@ -941,18 +941,18 @@
                                         <br>
                                         <table class="table table-hover table-responsive table-condensed" style="font-size: smaller">
                                             <tr>
-                                                <th>GP Risks (bold part)</th>
+                                                <!--<th>GP Risks (bold part)</th>-->
                                                 <th>GP Risks</th>
                                                 <th></th>
                                             </tr>
                                             <tr *ngFor="let item of fund.onePagerDescriptions" [hidden]="item.type !=2">
-                                                <td>
-                                                    <textarea fz-elastic spellcheck="false"  class="form-control" name="descriptionBold" [(ngModel)]="item.descriptionBold"></textarea>
-                                                    <!--<input type="text" class="form-control" name="descriptionBold" [(ngModel)]="item.descriptionBold" placeholder="-" #descriptionBold="ngModel"/>-->
-                                                    <!--<div [hidden]="descriptionBold.valid || descriptionBold.pristine" class="alert alert-danger">-->
-                                                        <!--Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'-->
-                                                    <!--</div>-->
-                                                </td>
+                                                <!--<td>-->
+                                                    <!--<textarea fz-elastic spellcheck="false"  class="form-control" name="descriptionBold" [(ngModel)]="item.descriptionBold"></textarea>-->
+                                                    <!--&lt;!&ndash;<input type="text" class="form-control" name="descriptionBold" [(ngModel)]="item.descriptionBold" placeholder="-" #descriptionBold="ngModel"/>&ndash;&gt;-->
+                                                    <!--&lt;!&ndash;<div [hidden]="descriptionBold.valid || descriptionBold.pristine" class="alert alert-danger">&ndash;&gt;-->
+                                                        <!--&lt;!&ndash;Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'&ndash;&gt;-->
+                                                    <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                                                <!--</td>-->
 
                                                 <td>
                                                     <textarea fz-elastic spellcheck="false"  class="form-control" name="description" [(ngModel)]="item.description"></textarea>
@@ -977,18 +977,18 @@
                                         <br>
                                         <table class="table table-hover table-responsive table-condensed" style="font-size: smaller">
                                             <tr>
-                                                <th>Strategy/Structure Merits (bold part)</th>
+                                                <!--<th>Strategy/Structure Merits (bold part)</th>-->
                                                 <th>Strategy/Structure Merits</th>
                                                 <th></th>
                                             </tr>
                                             <tr *ngFor="let item of fund.onePagerDescriptions" [hidden]="item.type !=3">
-                                                <td>
-                                                    <textarea fz-elastic spellcheck="false"  class="form-control" name="descriptionBold" [(ngModel)]="item.descriptionBold"></textarea>
-                                                    <!--<input type="text" class="form-control" name="descriptionBold" [(ngModel)]="item.descriptionBold" placeholder="-" #descriptionBold="ngModel"/>-->
-                                                    <!--<div [hidden]="descriptionBold.valid || descriptionBold.pristine" class="alert alert-danger">-->
-                                                        <!--Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'-->
-                                                    <!--</div>-->
-                                                </td>
+                                                <!--<td>-->
+                                                    <!--<textarea fz-elastic spellcheck="false"  class="form-control" name="descriptionBold" [(ngModel)]="item.descriptionBold"></textarea>-->
+                                                    <!--&lt;!&ndash;<input type="text" class="form-control" name="descriptionBold" [(ngModel)]="item.descriptionBold" placeholder="-" #descriptionBold="ngModel"/>&ndash;&gt;-->
+                                                    <!--&lt;!&ndash;<div [hidden]="descriptionBold.valid || descriptionBold.pristine" class="alert alert-danger">&ndash;&gt;-->
+                                                        <!--&lt;!&ndash;Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'&ndash;&gt;-->
+                                                    <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                                                <!--</td>-->
 
                                                 <td>
                                                     <textarea fz-elastic spellcheck="false"  class="form-control" name="description" [(ngModel)]="item.description"></textarea>
@@ -1013,18 +1013,18 @@
                                         <br>
                                         <table class="table table-hover table-responsive table-condensed" style="font-size: smaller">
                                             <tr>
-                                                <th>Strategy/Structure Risks (bold part)</th>
+                                                <!--<th>Strategy/Structure Risks (bold part)</th>-->
                                                 <th>Strategy/Structure Risks</th>
                                                 <th></th>
                                             </tr>
                                             <tr *ngFor="let item of fund.onePagerDescriptions" [hidden]="item.type !=4">
-                                                <td>
-                                                    <textarea fz-elastic spellcheck="false"  class="form-control" name="descriptionBold" [(ngModel)]="item.descriptionBold"></textarea>
-                                                    <!--<input type="text" class="form-control" name="descriptionBold" [(ngModel)]="item.descriptionBold" placeholder="-" #descriptionBold="ngModel"/>-->
-                                                    <!--<div [hidden]="descriptionBold.valid || descriptionBold.pristine" class="alert alert-danger">-->
-                                                        <!--Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'-->
-                                                    <!--</div>-->
-                                                </td>
+                                                <!--<td>-->
+                                                    <!--<textarea fz-elastic spellcheck="false"  class="form-control" name="descriptionBold" [(ngModel)]="item.descriptionBold"></textarea>-->
+                                                    <!--&lt;!&ndash;<input type="text" class="form-control" name="descriptionBold" [(ngModel)]="item.descriptionBold" placeholder="-" #descriptionBold="ngModel"/>&ndash;&gt;-->
+                                                    <!--&lt;!&ndash;<div [hidden]="descriptionBold.valid || descriptionBold.pristine" class="alert alert-danger">&ndash;&gt;-->
+                                                        <!--&lt;!&ndash;Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'&ndash;&gt;-->
+                                                    <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                                                <!--</td>-->
 
                                                 <td>
                                                     <textarea fz-elastic spellcheck="false"  class="form-control" name="description" [(ngModel)]="item.description"></textarea>
@@ -1049,18 +1049,18 @@
                                         <br>
                                         <table class="table table-hover table-responsive table-condensed" style="font-size: smaller">
                                             <tr>
-                                                <th>Performance Merits (bold part)</th>
+                                                <!--<th>Performance Merits (bold part)</th>-->
                                                 <th>Performance Merits</th>
                                                 <th></th>
                                             </tr>
                                             <tr *ngFor="let item of fund.onePagerDescriptions" [hidden]="item.type !=5">
-                                                <td>
-                                                    <textarea fz-elastic spellcheck="false"  class="form-control" name="descriptionBold" [(ngModel)]="item.descriptionBold"></textarea>
-                                                    <!--<input type="text" class="form-control" name="descriptionBold" [(ngModel)]="item.descriptionBold" placeholder="-" #descriptionBold="ngModel"/>-->
-                                                    <!--<div [hidden]="descriptionBold.valid || descriptionBold.pristine" class="alert alert-danger">-->
-                                                        <!--Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'-->
-                                                    <!--</div>-->
-                                                </td>
+                                                <!--<td>-->
+                                                    <!--<textarea fz-elastic spellcheck="false"  class="form-control" name="descriptionBold" [(ngModel)]="item.descriptionBold"></textarea>-->
+                                                    <!--&lt;!&ndash;<input type="text" class="form-control" name="descriptionBold" [(ngModel)]="item.descriptionBold" placeholder="-" #descriptionBold="ngModel"/>&ndash;&gt;-->
+                                                    <!--&lt;!&ndash;<div [hidden]="descriptionBold.valid || descriptionBold.pristine" class="alert alert-danger">&ndash;&gt;-->
+                                                        <!--&lt;!&ndash;Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'&ndash;&gt;-->
+                                                    <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                                                <!--</td>-->
 
                                                 <td>
                                                     <textarea fz-elastic spellcheck="false"  class="form-control" name="description" [(ngModel)]="item.description"></textarea>
@@ -1085,18 +1085,18 @@
                                         <br>
                                         <table class="table table-hover table-responsive table-condensed" style="font-size: smaller">
                                             <tr>
-                                                <th>Performance Risks (bold part)</th>
+                                                <!--<th>Performance Risks (bold part)</th>-->
                                                 <th>Performance Risks</th>
                                                 <th></th>
                                             </tr>
                                             <tr *ngFor="let item of fund.onePagerDescriptions" [hidden]="item.type !=6">
-                                                <td>
-                                                    <textarea fz-elastic spellcheck="false"  class="form-control" name="descriptionBold" [(ngModel)]="item.descriptionBold"></textarea>
-                                                    <!--<input type="text" class="form-control" name="descriptionBold" [(ngModel)]="item.descriptionBold" placeholder="-" #descriptionBold="ngModel"/>-->
-                                                    <!--<div [hidden]="descriptionBold.valid || descriptionBold.pristine" class="alert alert-danger">-->
-                                                        <!--Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'-->
-                                                    <!--</div>-->
-                                                </td>
+                                                <!--<td>-->
+                                                    <!--<textarea fz-elastic spellcheck="false"  class="form-control" name="descriptionBold" [(ngModel)]="item.descriptionBold"></textarea>-->
+                                                    <!--&lt;!&ndash;<input type="text" class="form-control" name="descriptionBold" [(ngModel)]="item.descriptionBold" placeholder="-" #descriptionBold="ngModel"/>&ndash;&gt;-->
+                                                    <!--&lt;!&ndash;<div [hidden]="descriptionBold.valid || descriptionBold.pristine" class="alert alert-danger">&ndash;&gt;-->
+                                                        <!--&lt;!&ndash;Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'&ndash;&gt;-->
+                                                    <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                                                <!--</td>-->
 
                                                 <td>
                                                     <textarea fz-elastic spellcheck="false"  class="form-control" name="description" [(ngModel)]="item.description"></textarea>
@@ -1223,8 +1223,8 @@
                                         <br>
                                         <table class="table table-hover table-responsive table-condensed" style="font-size: smaller">
                                             <tr>
-                                                <th>Senior Management Team Overall info (bold part)</th>
-                                                <th>Senior Management Team Overall info</th>
+                                                <th>Senior Management Team Overall info (bold part, e.g. "Average Yrs at Firm")</th>
+                                                <th>Senior Management Team Overall info (e.g. 5.5)</th>
                                                 <th></th>
                                             </tr>
                                             <tr *ngFor="let item of fund.onePagerDescriptions" [hidden]="item.type !=10">
