--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -854,9 +854,11 @@
                                 <br>
                                 <div class="row">
                                     <div style="text-align: center">
-                                        <img [src]="url_GP" style="max-width: 245px; max-height: 245px">
-                                        <h4>{{fund.fundName}} One Pager Creator</h4>
-                                        <!--<img [src]="url_NIC" style="max-width: 245px; max-height: 245px">-->
+                                        <h4>
+                                            <img [src]="url_GP" style="max-width: 245px; max-height: 245px">
+                                            {{fund.fundName}}
+                                            <!--<img [src]="url_NIC" style="max-width: 245px; max-height: 245px">-->
+                                        </h4>
                                     </div>
                                 </div>
                                 <br>
