--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -855,9 +855,9 @@
                                 <div class="row">
                                     <div style="text-align: center">
                                         <h4>
-                                            <img [src]="url_GP" style="max-width: 245px; max-height: 245px">
+                                            <img [src]="url_GP" style="max-width: 144px; max-height: 144px">
                                             {{fund.fundName}}
-                                            <!--<img [src]="url_NIC" style="max-width: 245px; max-height: 245px">-->
+                                            <img [src]="url_NIC" style="max-width: 144px; max-height: 144px">
                                         </h4>
                                     </div>
                                 </div>
