--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -909,6 +909,30 @@
                                         <br>
                                         <table class="table table-hover table-responsive table-condensed" style="font-size: smaller">
                                             <tr>
+                                                <th>Organization Overview</th>
+                                            </tr>
+                                        </table>
+                                        <table class="table table-hover table-responsive table-condensed" style="font-size: smaller">
+                                            <tr>
+                                                <th>GP Name</th>
+                                                <td style="font-size: small">{{fund.firm.firmName}}</td>
+                                                <th>Strategy AUM (mln)</th>
+                                                <th>Organization Overview</th>
+                                                <th>Locations</th>
+                                                <th>Organization Overview</th>
+                                            </tr>
+                                            <tr>
+                                                <th>Firm Inception</th>
+                                                <th>Organization Overview</th>
+                                                <th>Inv. + Oper. Team</th>
+                                                <th>Organization Overview</th>
+                                                <th>Peers</th>
+                                                <th>Organization Overview</th>
+                                            </tr>
+                                        </table>
+                                        <br>
+                                        <table class="table table-hover table-responsive table-condensed" style="font-size: smaller">
+                                            <tr>
                                                 <!--<th>GP Merits (bold part)</th>-->
                                                 <th>GP Merits</th>
                                                 <th></th>
